sonarqube fixes
Signed-off-by: Anshuman Sanghvi <anshuman.sanghvi@gmail.com>